# perceptron

./: Cargo.toml  README.md
src/: integer_perceptron.rs  lib.rs  perceptron.rs
